--- a/HW_14/style.scss
+++ b/HW_14/style.scss
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'icomoon';
-  src:  url('fonts/icomoon.eot?t81gev');
-  src:  url('fonts/icomoon.eot?t81gev#iefix') format('embedded-opentype'),
-  url('fonts/icomoon.ttf?t81gev') format('truetype'),
-  url('fonts/icomoon.woff?t81gev') format('woff'),
-  url('fonts/icomoon.svg?t81gev#icomoon') format('svg');
+  src:  url('fonts/icomoon.eot?2ya2g');
+  src:  url('fonts/icomoon.eot?2ya2g#iefix') format('embedded-opentype'),
+  url('fonts/icomoon.ttf?2ya2g') format('truetype'),
+  url('fonts/icomoon.woff?2ya2g') format('woff'),
+  url('fonts/icomoon.svg?2ya2g#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
   font-display: block;
@@ -25,6 +25,9 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+.icon-basket:before {
+  content: "\e901";
+}
 .icon-close:before {
   content: "\e900";
 }
@@ -89,6 +92,17 @@ header {
     margin-right: 1rem;
   }
 
+  .basket-icon {
+    margin: 1rem;
+    color: white;
+    border-color: white;
+    background-color: transparent;
+  }
+
+  .icon-basket {
+    color: white;
+    font-size: 1.5rem;
+  }
 
 }
 
@@ -466,6 +480,64 @@ footer {
       justify-content: space-around;
       padding: 1rem;
 
+    }
+  }
+}
+
+.wrapper-basket {
+  width: 100%;
+  height: 100vh;
+  position: fixed;
+  background-color: rgba(0, 0, 0, 0.4);
+  z-index: 3;
+  left: 0;
+  top: 0;
+  justify-content: center;
+  align-items: center;
+  display: none;
+
+  .basket {
+    background-color: rgba(0, 0, 0, 0.9);
+    border-radius: 20px;
+    box-shadow: 0 0 0.5rem rgba(255, 255, 255, 0.5);
+    color: white;
+    width: 80%;
+    height: 700px;
+    padding: 10px;
+    display: flex;
+    flex-direction: column;
+    overflow-y: auto;
+
+    h2 {
+      text-align: center;
+      margin-bottom: 2rem;
+      font-size: 3rem;
+    }
+  }
+
+  .content {
+    display: flex;
+    justify-content: space-around;
+
+    .image {
+      display: flex;
+      width: 20%;
+
+      img {
+        width: 100%;
+      }
+    }
+
+    .info {
+      display: flex;
+    }
+
+    .price {
+      display: flex;
+    }
+
+    .amount {
+      display: flex;
     }
   }
 }
