--- a/HW_14/style.scss
+++ b/HW_14/style.scss
@@ -544,5 +544,36 @@ footer {
   .sumAmount {
 
   }
+
+  .order {
+    display: flex;
+    justify-content: center;
+
+    button {
+      margin-bottom: 1rem;
+    }
+  }
+}
+
+.order-wrapper {
+  width: 100%;
+  height: 100vh;
+  background-image: url("images/back.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  .order-modal {
+    background-color: rgba(0, 0, 0, 0.9);
+    border-radius: 20px;
+    box-shadow: 0 0 0.5rem rgba(255, 255, 255, 0.5);
+    color: white;
+    width: 700px;
+    height: 500px;
+    padding: 10px;
+  }
 }
 
