--- a/HW_14/style.scss
+++ b/HW_14/style.scss
@@ -58,11 +58,13 @@ header {
 
   .navigation {
     width: 100%;
+    display: flex;
     justify-content: space-between;
   }
 
   .logo-holder {
     align-items: center;
+
   }
 
   .logo-holder img {
@@ -571,9 +573,22 @@ footer {
     border-radius: 20px;
     box-shadow: 0 0 0.5rem rgba(255, 255, 255, 0.5);
     color: white;
-    width: 700px;
+    width: 70%;
     height: 500px;
     padding: 10px;
+
+    h2 {
+      text-align: center;
+      font-family: 'Lobster', cursive;
+      font-size: 2.2rem;
+      margin-bottom: 2rem;
+    }
+
+    p {
+      font-family: 'Montserrat Alternates', sans-serif;
+      font-weight: 100;
+      font-size: 1.5rem;
+    }
   }
 }
 
